Fixed spacing of elements

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 .bb-wrap {
 	text-align: center;
-	padding: 0 .35rem;
+	padding: 0 1rem;
 }
 
 .bb-wrap button {
@@ -10,7 +10,7 @@
 	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	line-height: normal;
-	margin: 1rem 0 1.25rem;
+	margin: 0 0 1.25rem;
 	position: relative;
 	text-decoration: none;
 	text-align: center;
@@ -24,9 +24,11 @@
 	transition: background-color 2000ms ease-out;
 }
 
-.bb-quotes {
+.widget ul.bb-quotes {
+  	margin-bottom: 0;
 	list-style-type: none; 
 	margin-left: 0;
+	padding-bottom: 1em;
 }
 
 .bb-quotes li {
